# AdsAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ads/: forms.py  models.py  views.py
ads/templates/ads/: ad_detail.html  ad_form.html  ad_list.html  proposal_detail.html  proposal_form.html  proposal_list.html
apps/ads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/ads/migrations/: 0001_initial.py  0002_alter_exchangeproposal_status.py
apps/ads/templates/ads/: ad_confirm_delete.html  ad_detail.html  ad_list.html  proposal_detail.html  proposal_form.html  proposal_list.html
apps/users/: views.py
apps/users/templates/users/: register.html
config/: settings.py  urls.py
db/: model_mixins.py
nginx/servers/: site.conf
static/css/: styles.css
templates/: base.html
templates/errors/: 403.html
templates/includes/: pagination.html
templates/registration/: login.html
